// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml declaration grammar > annotation > declare annotation 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": []
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with multiple parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "value",
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with one parameter 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > parameters allow trailing comma 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "AnyType",
            "name": "any"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "AnyType",
            "name": "any"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be optional 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": true,
          "type": {
            "$type": "AnyType",
            "name": "any"
          }
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "BoolType",
            "name": "bool"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "BoolType",
            "name": "bool"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DatetimeType",
            "name": "datetime"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DatetimeType",
            "name": "datetime"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DecimalType",
            "name": "decimal"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DecimalType",
            "name": "decimal"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "TextType",
            "name": "text"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "TextType",
            "name": "text"
          },
          "optional": false
        }
      ]
    }
  ]
}"
`;

exports[`formml declaration grammar > annotation > type system > parameters can omit type hint 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": false
        }
      ]
    }
  ]
}"
`;
